update Mathematical Operator

--- a/section I/index.html
+++ b/section I/index.html
@@ -12,9 +12,14 @@
     <style>
       h1 {
         color: rgb(110, 50, 50);
-        font-size: 32px;
+        font-size: 42px;
+        font-style: oblique;
         text-align: center;
-        text-shadow: 0 1px 1px #fff;
+        text-shadow: 2px 1px 1px #fff;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     </style>
   </body>
