--- a/Section II/index.html
+++ b/Section II/index.html
@@ -7,5 +7,20 @@
     <title>JavaScript Section II</title>
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>JavaScript Updated Course Section II</h1>
+    <style>
+      h1 {
+        color: rgb(110, 50, 50);
+        font-size: 42px;
+        font-style: oblique;
+        text-align: center;
+        text-shadow: 2px 1px 1px #fff;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
+  </body>
 </html>
