--- a/Section II/index.html
+++ b/Section II/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript Section II</title>
-    <script src="/CodingRoundOfBigData.js" defer></script>
+    <script src="/Section II/script.js" defer></script>
   </head>
   <body>
     <h1>JavaScript Updated Course Section II</h1>
