--- a/Section VII/index.html
+++ b/Section VII/index.html
@@ -27,6 +27,6 @@
         </p>
       </section>
     </main>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
