--- a/Section VIIII/index.html
+++ b/Section VIIII/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>How JavaScript works behind the scenes</title>
+    <title>Data Structures, Modern Operators and Strings</title>
     <script src="script.js" defer></script>
   </head>
   <body>
