--- a/Section VIIII/index.html
+++ b/Section VIIII/index.html
@@ -10,15 +10,28 @@
   <body>
     <style>
       body {
-        background-color: rgba(0, 0, 0, 0.255);
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        background: linear-gradient(to top left, #28b487, #7dd56f);
       }
       h2 {
-        height: 100vh;
+        font-family: sans-serif;
+        font-size: 50px;
+        line-height: 1.3;
+        width: 100%;
+        padding: 30px;
         text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-style: italic;
+        color: white;
+      }
+      button {
+        width: 50px;
+        height: 20px;
+        margin: 10px;
+      }
+      textarea {
+        width: 300px;
+        height: 100px;
       }
     </style>
     <h2>Data Structures, Modern Operators and strings</h2>
