Renamed the title

--- a/Section XVI/index.html
+++ b/Section XVI/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Object Oriented Programming (OOP) With JavaScript</title>
+    <title>Asynchronous JavaScript Promises, ajax</title>
     <style>
       body {
         height: 100vh;
@@ -25,6 +25,6 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <h1>Object Oriented Programming (OOP) With JavaScript</h1>
+    <h1>Asynchronous JavaScript Promises, ajax</h1>
   </body>
 </html>
