--- a/Section XVI/index.html
+++ b/Section XVI/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Asynchronous JavaScript Promises, ajax</title>
-    <style>
-      body {
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        background: linear-gradient(to top left, #28b487, #7dd56f);
-      }
-      h1 {
-        font-family: sans-serif;
-        font-size: 50px;
-        line-height: 1.3;
-        width: 100%;
-        padding: 30px;
-        text-align: center;
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
+    <title>Asynchronous JavaScript</title>
   </head>
   <body>
-    <h1>Asynchronous JavaScript Promises, ajax</h1>
+    <main class="container">
+      <div class="countries">
+        <!--
+        <article class="country">
+          <img class="country__img" src="" />
+          <div class="country__data">
+            <h3 class="country__name">COUNTRY</h3>
+            <h4 class="country__region">REGION</h4>
+            <p class="country__row"><span>👫</span>POP people</p>
+            <p class="country__row"><span>🗣️</span>LANG</p>
+            <p class="country__row"><span>💰</span>CUR</p>
+          </div>
+        </article>
+        -->
+      </div>
+      <!-- <button class="btn-country">Where am I?</button> -->
+      <div class="images"></div>
+    </main>
   </body>
 </html>
