Implemented searchView next and back buttons

--- a/Section XVIII Forkify/index.html
+++ b/Section XVIII Forkify/index.html
@@ -107,7 +107,8 @@
         </ul>
 
         <div class="pagination">
-          <!-- <button class="btn--inline pagination__btn--prev">
+          <!-- 
+          <button class="btn--inline pagination__btn--prev">
             <svg class="search__icon">
               <use href="src/img/icons.svg#icon-arrow-left"></use>
             </svg>
@@ -118,10 +119,10 @@
             <svg class="search__icon">
               <use href="src/img/icons.svg#icon-arrow-right"></use>
             </svg>
-          </button> -->
+          </button>  -->
         </div>
 
-        <!-- <p class="copyright">
+        <p class="copyright">
           &copy; Copyright by
           <a
             class="twitter-link"
@@ -130,7 +131,7 @@
             >Jonas Schmedtmann</a
           >. Use for learning or your portfolio. Don't use to teach. Don't claim
           as your own.
-        </p> -->
+        </p>
       </div>
 
       <div class="recipe">
