Fixed the buttons styling in searchResults.scss

--- a/Section XVIII Forkify/index.html
+++ b/Section XVIII Forkify/index.html
@@ -107,8 +107,7 @@
         </ul>
 
         <div class="pagination">
-          <!-- 
-          <button class="btn--inline pagination__btn--prev">
+          <!-- <button class="btn--inline pagination__btn--prev">
             <svg class="search__icon">
               <use href="src/img/icons.svg#icon-arrow-left"></use>
             </svg>
@@ -119,7 +118,7 @@
             <svg class="search__icon">
               <use href="src/img/icons.svg#icon-arrow-right"></use>
             </svg>
-          </button>  -->
+          </button> -->
         </div>
 
         <p class="copyright">
